--- a/tidyverse_packages/purr.html
+++ b/tidyverse_packages/purr.html
@@ -130,17 +130,19 @@ $(document).ready(function () {
 
 
 <p><br></p>
-<p>This is the final installments in my <em>Unpacking the Tidyverse</em> series. Each of the eight posts focus on one of the core packages in Hadley Wickham’s tidyverse. Instructions given in each post are mainly derived from Hadley’s textbook, <a href="http://r4ds.had.co.nz/">R for Data Science</a> and CRAN package documentation. This installment of <em>Unpacking the Tidyverse</em> focuses on iteration. We’ll learn what for loops are, and how they work. Then we’ll learn how to perform these same operations with purrr functions. The previous installment focuses on the categorical data manipulation package, <a href="%7B%7B%20site.baseurl%20%7D%7D/r4ds-forcats">forcats</a>.</p>
+<p>This is the final installments in my <em>Unpacking the Tidyverse</em> series. It has actually been pretty fun and extremely rewarding to systematically work through the tidyverse. I’ve pored over the R4DS book, vignettes, GitHub repositories, blog posts, CRAN Documentation, and RStudio cheatsheets in order to better understand these eight very important packages.</p>
+<p>This final installment of <em>Unpacking the Tidyverse</em> focuses on iteration. I cover why we need iteration, what for loops are, and how the purrr package can help us simplify these tasks. The previous installment of <em>Unpacking the Tidyverse</em> focuses on the categorical data manipulation package, <a href="%7B%7B%20site.baseurl%20%7D%7D/r4ds-forcats">forcats</a>.</p>
 <p>To use purrr, we must first download the tidyverse.</p>
+<p><br></p>
 <div id="library" class="section level3">
 <h3>Library</h3>
 <pre class="r"><code>library('tidyverse')</code></pre>
 <p><br></p>
 </div>
 <div id="iteration-by-hand" class="section level3">
-<h3>Iteration By Hand</h3>
-<p>Iteration allows you to conduct the same operation on multiple inputs without tediously copying-and-pasting code. Here’s a simple example of a for-loop.</p>
-<p>First we’ll create a dataframe with 4 variables: a, b, c, and d. Each of these variables will contian 10 randomly generated numbers from the normal distribution using the function <code>rnorm</code>.</p>
+<h3>Iteration by Hand</h3>
+<p>Iteration allows you to conduct the same operation on multiple inputs without tediously copying-and-pasting code. To illustrate the need for iteration, I’ll set up a repetitive task and complete it by hand. Once we have a baseline of tediousness, I’ll complete the same task using a for loop. After that, we’ll move to the purrr package’s <code>map</code> functions for maximum-awesome.</p>
+<p>To illustrate the need for iteration, let’s compute a simple summary statistic on a dataset. First we’ll create a dataframe with 4 variables: a, b, c, and d. Each of these variables will contian 10 randomly generated numbers from the normal distribution using the function <code>rnorm</code>.</p>
 <pre class="r"><code>df &lt;- tibble(
 a = rnorm(10),
 b = rnorm(10), 
@@ -150,37 +152,40 @@ d = rnorm(10)
 
 df</code></pre>
 <pre><code>## # A tibble: 10 x 4
-##          a      b      c      d
-##      &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;
-##  1  0.652   1.29  -1.19   0.534
-##  2  0.0996 -1.40   0.738 -0.868
-##  3 -0.0587  1.22   0.846  1.06 
-##  4 -1.40    0.140  0.189 -0.634
-##  5  0.518  -0.249 -0.625 -0.800
-##  6 -0.434   1.70   0.695 -0.432
-##  7  0.391  -0.445  0.677 -0.587
-##  8  2.20    0.524 -1.36  -1.32 
-##  9  0.611   0.292 -1.07   0.822
-## 10 -0.207   0.647 -1.13  -1.36</code></pre>
+##          a       b       c       d
+##      &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;   &lt;dbl&gt;
+##  1 -0.886  -0.623   0.284   0.0157
+##  2  1.66   -0.811   0.0278 -0.365 
+##  3  1.27    0.912   0.239  -0.0467
+##  4  0.128   1.21    0.782  -0.842 
+##  5 -0.824   0.952   0.454  -1.52  
+##  6 -0.0218 -0.475  -1.59    2.14  
+##  7  0.171   2.69    1.14   -1.31  
+##  8 -0.143  -0.0611  1.75    0.308 
+##  9 -1.42   -0.760   1.65    0.642 
+## 10 -0.316   0.672   1.32   -0.736</code></pre>
 <p><br></p>
-<p>Now let’s try to compute the mean of each variable</p>
+<p>As you can see the numbers range from around negative 3 to positive 3, but are mostly populating -1 to 1. This is typical of the normal distribution, to see this distribution in action, check out my previous blog post <a href="%7B%7B%20site.baseurl%20%7D%7D/a-roll-of-the-dice">A Roll of the Dice</a>.</p>
+<p>Now to compute the mean of each of the variables a-d:</p>
 <pre class="r"><code>mean(df)</code></pre>
 <pre><code>## Warning in mean.default(df): argument is not numeric or logical: returning
 ## NA</code></pre>
 <pre><code>## [1] NA</code></pre>
 <p><br></p>
-<p>well that doesn’t work. I guess we’ll have to specify each variable.</p>
-<pre class="r"><code>mean(df$a)</code></pre>
-<pre><code>## [1] 0.2369284</code></pre>
-<pre class="r"><code>mean(df$b)</code></pre>
-<pre><code>## [1] 0.3720339</code></pre>
-<pre class="r"><code>mean(df$c)</code></pre>
-<pre><code>## [1] -0.2220784</code></pre>
-<pre class="r"><code>mean(df$d)</code></pre>
-<pre><code>## [1] -0.3581975</code></pre>
+<p>Well that doesn’t work…</p>
+<p>I guess we’ll have to specify each variable.</p>
 <p><br></p>
-<p>Imagine we have 100 variables that we want to calculate the mean of. That wouldn’t be very fun. That’s where for loops come in.</p>
-<p>&lt;br.</p>
+<pre class="r"><code>mean(df$a)</code></pre>
+<pre><code>## [1] -0.0381554</code></pre>
+<pre class="r"><code>mean(df$b)</code></pre>
+<pre><code>## [1] 0.37028</code></pre>
+<pre class="r"><code>mean(df$c)</code></pre>
+<pre><code>## [1] 0.6052741</code></pre>
+<pre class="r"><code>mean(df$d)</code></pre>
+<pre><code>## [1] -0.1714349</code></pre>
+<p><br></p>
+<p>That’s better. But imagine if we have 100 variables that we want to calculate the mean of… That would be awful! Good thing we have for loops to rescue us from all of this <em>work</em>.</p>
+<p><br></p>
 </div>
 <div id="for-loops" class="section level3">
 <h3>For Loops</h3>
@@ -193,34 +198,38 @@ for (i in seq_along((df))) {
 
 # Step 3 
   output_vector[[i]] &lt;- mean(df[[i]])
+
+# close for loop
 }
 
+# display results
 output_vector</code></pre>
-<pre><code>## [1]  0.2369284  0.3720339 -0.2220784 -0.3581975</code></pre>
+<pre><code>## [1] -0.0381554  0.3702800  0.6052741 -0.1714349</code></pre>
 <p><br></p>
-<p>We’ve succefully created a for loop to iterate through the variables! Each for loop is broken down into three steps.</p>
+<p>We’ve succefully created a for loop to iterate through the variables! It may seem like more work at first, and maybe it is for such a simple task as caclulating the mean of 4 variables. But for loops are an integral programming technique and can be extremely useful. Even if you’re a master at purrr.</p>
+<p>Each for loop is broken down into three steps.</p>
 <p>The first step, you must create an output vector to store your results. It’s easy to create an empty vector of the correct size using the <code>vector()</code> function. In the first arguement of <code>vector()</code> you specify what kind of vector to create. This could be specified as any of the data structures i.e. integer, logical, character, etc. The second argumenet of <code>vector()</code> is the length of the vector. Clever use of <code>ncol()</code>, <code>nrow()</code>, or <code>length()</code> will give you the proper length for your output vector.</p>
 <p>The second step of a for loop is to define the sequence. Here we determine what to loop over using base R’s <code>seq_along()</code> function. Create the variable <code>i</code> as a counter variable.</p>
 <p>The third and most complicated step of creating a for loop is in the body of the sequence. Here we describe to R exactly what we want to do as we loop through our defined dataframe. Sometimes we simply want to take the mean of each variable, and store that number into our output vector. Other times we may want to insert a series of if then statements, of generate graphics of the data we’re looping over. The possibilities are endless.</p>
-<p>Let’s take our iteration discussion to the third and final level. Purrr functions.</p>
+<p>Great, so we’ve covered a iteration and a simple for loop. Now let’s get to the good stuff. The reason you came here. The Purrr package!</p>
 <p><br></p>
 </div>
-<div id="purrr-functions" class="section level3">
-<h3>Purrr Functions</h3>
-<p>In our quest to find the mean of each of the four variables in <code>df</code>, can use the most basic purrr function <code>map()</code>.</p>
+<div id="purrr-map-function" class="section level3">
+<h3>Purrr Map Function</h3>
+<p>In our quest to find the mean of each of the four variables in <code>df</code>, we can use the most basic purrr function <code>map()</code>.</p>
 <pre class="r"><code>df %&gt;% 
   map(mean)</code></pre>
 <pre><code>## $a
-## [1] 0.2369284
+## [1] -0.0381554
 ## 
 ## $b
-## [1] 0.3720339
+## [1] 0.37028
 ## 
 ## $c
-## [1] -0.2220784
+## [1] 0.6052741
 ## 
 ## $d
-## [1] -0.3581975</code></pre>
+## [1] -0.1714349</code></pre>
 <p><br></p>
 <p>The function <code>map</code> takes two main arguements, a target to iterate over, and a function to apply during that iteration. <code>map</code> Returns a list of values, but if you don’t want a generic list you can the varients of the <code>map</code> function.</p>
 <ul>
@@ -229,50 +238,199 @@ output_vector</code></pre>
 <li><code>map_dbl()</code> returns a double vector.</li>
 <li><code>map_chr()</code> returns a character vector.</li>
 </ul>
+<p><br></p>
 <p>Here’s what <code>map_dbl()</code> looks like when applied to our favorite iteration-situation.</p>
 <pre class="r"><code>df %&gt;%
   map_dbl(mean)</code></pre>
 <pre><code>##          a          b          c          d 
-##  0.2369284  0.3720339 -0.2220784 -0.3581975</code></pre>
-<pre class="r"><code>df</code></pre>
-<pre><code>## # A tibble: 10 x 4
-##          a      b      c      d
-##      &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;  &lt;dbl&gt;
-##  1  0.652   1.29  -1.19   0.534
-##  2  0.0996 -1.40   0.738 -0.868
-##  3 -0.0587  1.22   0.846  1.06 
-##  4 -1.40    0.140  0.189 -0.634
-##  5  0.518  -0.249 -0.625 -0.800
-##  6 -0.434   1.70   0.695 -0.432
-##  7  0.391  -0.445  0.677 -0.587
-##  8  2.20    0.524 -1.36  -1.32 
-##  9  0.611   0.292 -1.07   0.822
-## 10 -0.207   0.647 -1.13  -1.36</code></pre>
+## -0.0381554  0.3702800  0.6052741 -0.1714349</code></pre>
 <p><br></p>
 <p>That’s smooooth.</p>
-<div id="map_chr" class="section level4">
-<h4>map_chr</h4>
-</div>
-<div id="map_lgl" class="section level4">
-<h4>map_lgl</h4>
-</div>
-<div id="mapping-over-multiple-arguements" class="section level4">
-<h4>mapping over multiple arguements</h4>
-<pre><code>mu &lt;- list(5, 10, -3)
+<p>So let’s make it more complex! How about we create our own function and test out the <code>map_chr</code> function. I want to run through a dataframe of arbitrary size, and return the words “positve”, “negative”, or “zero”, if the elements are as such. I want this to function to be done to every</p>
+<p>First things first, let’s make the custom function!</p>
+<pre class="r"><code># name the function 'classify_chr' with input = 'input'
+classify_chr &lt;- function(input) {
 
-mu %&gt;%
-  map(rnorm, n=5)</code></pre>
-</div>
-<div id="mapping-over-two-vectors-in-parallel" class="section level4">
-<h4>mapping over two vectors in parallel</h4>
-<pre><code>mu  &lt;- list(5,10,-3)
-sigma &lt;- list(1,5,10)
+# set a counter equal to 1 
+i &lt;- 1
 
-map2_dbl(mu, sigma, rnorm, n=5)
-</code></pre>
-<pre><code>pmap{}
-</code></pre>
+# create a save vector of input length
+save_vect &lt;- vector(&quot;character&quot;, length(input))
+
+# main while loop, while counter is less than or equal
+# to input length, classify the elements and put that
+# character classification into the save vector. 
+# Then, add one to the counter to move on to the next 
+# element. 
+while (i &lt;= length(input))
+  {
+    if (input[[i]] &gt; 0) {
+      save_vect[[i]] = &quot;positive&quot;
+    }
+    if (input[[i]] &lt; 0) {
+      save_vect[[i]] = &quot;negative&quot;
+    }
+    if (input[[i]] == 0) {
+      save_vect[[i]] = &quot;zero&quot;
+    }
+  i &lt;- i + 1
+  }
+
+# When the save vector is full of output, collapse the
+# results and separate them by a space. Finally, print
+# the resulting output vector.
+output &lt;- str_c(save_vect, collapse=&quot; &quot;)
+print(output)
+}</code></pre>
+<p><br></p>
+<p>Alright. That function was relatively easy to create! Let’s test it out.</p>
+<p><br></p>
+<pre class="r"><code># test classify_chr function
+classify_chr(-1)</code></pre>
+<pre><code>## [1] &quot;negative&quot;</code></pre>
+<pre class="r"><code>classify_chr(0)</code></pre>
+<pre><code>## [1] &quot;zero&quot;</code></pre>
+<pre class="r"><code>classify_chr(1)</code></pre>
+<pre><code>## [1] &quot;positive&quot;</code></pre>
+<p><br></p>
+<p>Single entries are working as expected. Let’s give the custom function a concantenated list of numbers and see what it does.</p>
+<p><br></p>
+<pre class="r"><code># test classify_chr on a numeric vector
+a &lt;- c(-1,0,1)
+
+classify_chr(a)</code></pre>
+<pre><code>## [1] &quot;negative zero positive&quot;</code></pre>
+<p><br></p>
+<p>Looking good, how about we step it up to the final level of complexity! Running through a tibble that has lists of numbers as it’s variables.</p>
+<p><br></p>
+<pre class="r"><code># test classify_chr on a tibble
+test_tib &lt;- tibble(
+  a = sample(-10:10,10, replace = T),
+  b = sample(1:10,10, replace = T),
+  c = 0
+)
+
+test_tib</code></pre>
+<pre><code>## # A tibble: 10 x 3
+##        a     b     c
+##    &lt;int&gt; &lt;int&gt; &lt;dbl&gt;
+##  1    -2     8     0
+##  2    -3     7     0
+##  3    -7     7     0
+##  4    -2     7     0
+##  5     5    10     0
+##  6     6    10     0
+##  7     1     8     0
+##  8     8     2     0
+##  9     4    10     0
+## 10    -4     7     0</code></pre>
+<pre class="r"><code>classify(test_tib)</code></pre>
+<pre><code>## Error in classify(test_tib): could not find function &quot;classify&quot;</code></pre>
+<p><br></p>
+<p>An Error! Oh no! Wait, that’s exactly why we went through all of this. Thats where purrr comes in! Let’s give it a shot.</p>
+<p><br></p>
+<pre class="r"><code># use map_chr to apply custom function to a tibble
+test_tib %&gt;%
+  map_chr(classify_chr)</code></pre>
+<pre><code>## [1] &quot;negative negative negative negative positive positive positive positive positive negative&quot;
+## [1] &quot;positive positive positive positive positive positive positive positive positive positive&quot;
+## [1] &quot;zero zero zero zero zero zero zero zero zero zero&quot;</code></pre>
+<pre><code>##                                                                                           a 
+## &quot;negative negative negative negative positive positive positive positive positive negative&quot; 
+##                                                                                           b 
+## &quot;positive positive positive positive positive positive positive positive positive positive&quot; 
+##                                                                                           c 
+##                                         &quot;zero zero zero zero zero zero zero zero zero zero&quot;</code></pre>
+<p><br></p>
+<p>Alright! Not the prettiest of outputs, but it does what it’s designed to do. And it’s a great illustration of when we need to use the map function.</p>
+<p><br></p>
 </div>
+<div id="purrr-map2-pmap-function" class="section level3">
+<h3>Purrr map2 &amp; pmap Function</h3>
+<p>When we want to map over two arguements in our function, we can use the map2 function. Say you want to generate a random number from the normal distribution with a specific mean and standard deviation.</p>
+<p>Using the <code>rnorm</code> function, you could do something like this.</p>
+<pre class="r"><code>rnorm(10, 5, n = 1)</code></pre>
+<pre><code>## [1] 0.7907042</code></pre>
+<p><br></p>
+<p>There we’ve taken number from the normal curve with mean (mu) 10, and standard deviation (sigma) 5. now say we want to do this 5 times each with 10 different inputs. Instead of writing 50 <code>rnorm</code> statements, <code>Map2</code> can help us out.</p>
+<p><br></p>
+<pre class="r"><code># create a variety of mean inputs 
+mu &lt;- rep(20:24, 2)
+
+# create a variety of standard devation inputs
+sigma &lt;- sample(1:5, size = 10, replace = T)
+
+# check the inputs
+mu</code></pre>
+<pre><code>##  [1] 20 21 22 23 24 20 21 22 23 24</code></pre>
+<pre class="r"><code>sigma</code></pre>
+<pre><code>##  [1] 5 4 4 3 2 3 2 5 3 3</code></pre>
+<pre class="r"><code># apply mu and sigma inputs to the rnorm function,
+# produce 5 outputs for each pair of input arguements
+map2(mu, sigma, rnorm, n=5)</code></pre>
+<pre><code>## [[1]]
+## [1] 15.25051 17.59498 19.54496 17.69805 13.91687
+## 
+## [[2]]
+## [1] 21.21309 16.56829 19.31072 21.74907 23.41674
+## 
+## [[3]]
+## [1] 29.06059 20.47726 23.83789 26.19456 17.02883
+## 
+## [[4]]
+## [1] 22.97144 21.71588 22.76496 19.45234 19.82203
+## 
+## [[5]]
+## [1] 23.06155 21.61128 22.78770 25.10887 26.39137
+## 
+## [[6]]
+## [1] 17.73251 19.13527 20.89635 14.59087 20.62059
+## 
+## [[7]]
+## [1] 18.79103 19.41206 22.08390 22.32475 20.60151
+## 
+## [[8]]
+## [1] 24.72140 20.97196 11.51450 27.28520 26.96440
+## 
+## [[9]]
+## [1] 21.19595 22.00689 23.12898 18.84608 25.39025
+## 
+## [[10]]
+## [1] 28.35159 26.42249 21.83207 22.05180 22.77183</code></pre>
+<p><br></p>
+<p>It’s easy to see how you could want 3 arguements, or 4 or 5. For the generalized case, of <strong>p</strong> inputs, we use the <code>pmap</code> function in much the same way we would use map2.</p>
+<p>As a final example, we want to again use the <code>rnorm</code> function to choose a number from the normal distribution with a set mean and standard deviation. this time, we also want to vary the number of outputs the function returns by changing the <code>n =</code> arguement in <code>rnorm</code>. 3 varied arguements is the job for <code>pmap</code>.</p>
+<pre class="r"><code>outs &lt;- c(10,15,20)
+mu &lt;- c(5,6,7)
+sigma &lt;- c(1,2,3)
+
+
+arguements &lt;- list(outs, mu, sigma)
+
+arguements %&gt;%
+  pmap(rnorm)</code></pre>
+<pre><code>## [[1]]
+##  [1] 3.776298 3.909059 5.165563 4.599000 7.466547 7.219048 5.152804
+##  [8] 4.253419 6.130323 5.277086
+## 
+## [[2]]
+##  [1] 10.1288671  5.0419847  5.9802932  4.8790071  4.7299666  5.8777478
+##  [7]  4.1538192  0.3462872  5.0180581  6.5327778  9.4033096  4.4814513
+## [13]  4.4167500  6.7611321  1.9100535
+## 
+## [[3]]
+##  [1]  9.187641 10.806397  7.350103  6.131942  9.225182  6.670331 10.072818
+##  [8]  8.925151  4.676763  6.385635  7.270602  1.739851  4.722665  5.404759
+## [15]  9.803135  6.696194  1.251938  8.486798  6.429558  7.387253</code></pre>
+<p><br></p>
+</div>
+<div id="conclusions" class="section level3">
+<h3>Conclusions</h3>
+<p>And that does it! That’s my run down of the most important purrr concepts and functions. That also completes my eight part series on the core tidyverse packages.</p>
+<p>I highly suggest you read the book <a href="http://r4ds.had.co.nz/">r4ds</a> written by Hadley Wickham and Garrett Grolemund. It’ll change your life! Maybe.</p>
+<p>Anyways, as always,</p>
+<p><br></p>
+<p>Untill next time, <br> - Fisher</p>
 </div>
 
 
